# protobuf-fuzz-guard

./: .gitignore  Cargo.toml  README.md  deny.toml  pyproject.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/pfg-core/: Cargo.toml
crates/pfg-core/src/: lib.rs  patterns.rs  scanner.rs
crates/pfg-core/src/harness/: mod.rs  templates.rs
crates/pfg-core/src/proto/: lexer.rs  mod.rs  model.rs
crates/pfg-core/tests/: harness.rs  parser.rs  properties.rs  scanner.rs
crates/pfg-core/tests/snapshots/: harness__harness_cpp.snap  harness__harness_go.snap  harness__harness_python.snap  harness__harness_rust.snap  scanner__rendered_diagnostics.snap
crates/protofuzz-cli/: Cargo.toml
crates/protofuzz-cli/src/: main.rs
crates/protofuzz-cli/tests/: cli.rs
docs/: rust-migration-plan.md  rust-sota-research.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_parser.rs
fuzz/seeds/: deep_nesting.proto  group_and_map.proto  recursive.proto  simple.proto
legacy/: README.md
legacy/src/protobuf_fuzz_guard/: harness_gen.py  proto_parser.py  scanner.py
legacy/tests/: test_harness_gen.py
src/protobuf_fuzz_guard/: __init__.py  cli.py  models.py
tests/: test_cli.py  test_proto_parser.py  test_scanner.py
