[workspace]
resolver = "2"
members = ["crates/pfg-core", "crates/protofuzz-cli"]
# The fuzz crate needs a nightly toolchain + libFuzzer sanitizers; keep it out of
# the stable workspace so `cargo build`/`cargo test` stay green everywhere.
exclude = ["fuzz"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/shovalbenjer/protobuf-fuzz-guard"
description = "Cross-language protobuf fuzz harness generator with CVE-pattern detection"

[workspace.dependencies]
pfg-core = { path = "crates/pfg-core" }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# dev
insta = "1"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Curated allows: noisy pedantic lints that do not improve a small tool.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
# Domain terms (DoS, RUSTSEC, libFuzzer, protoc, ...) are not code items.
doc_markdown = "allow"

[profile.release]
strip = true
