[project]
name = "protobuf-fuzz-guard"
version = "0.1.0"
description = "Cross-language protobuf fuzz harness generator with CVE-pattern detection"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
protofuzz = "protobuf_fuzz_guard.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
