[package]
name = "pfg-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

# Standalone workspace so the nightly/libFuzzer requirements do not leak into the
# main stable workspace.
[workspace]

[dependencies]
libfuzzer-sys = "0.4"
pfg-core = { path = "../crates/pfg-core" }

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1
