[package]
name = "pfg-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library: .proto parsing, CVE-pattern scanning, and fuzz-harness generation"

[dependencies]
thiserror.workspace = true
miette.workspace = true
serde = { workspace = true, optional = true }

[features]
default = ["serde"]
serde = ["dep:serde"]

[dev-dependencies]
insta.workspace = true
proptest.workspace = true

[lints]
workspace = true
