[package]
name = "protofuzz-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for protobuf-fuzz-guard: scan .proto files and generate fuzz harnesses"

[[bin]]
name = "protofuzz"
path = "src/main.rs"

[dependencies]
pfg-core.workspace = true
clap.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[lints]
workspace = true
